# OpenMathLibrary

./: .gitignore
C#/: .gitignore  README.md  ROADMAP.md  TheOpenMathLibrary.sln
C#/Docs/: CODING_STANDARDS.md  README.md  ROADMAP.md
C#/TheOpenMathLibrary.ActuarialCalculators/: ArithmeticLibrary.cs  BisectionLibrary.cs  PiecewiseSpecialFunctionsLibrary.cs  TranscendentalLibrary.cs
C#/TheOpenMathLibrary.ActuarialCalculators.Tests/: ArithmeticLibraryTests.cs  BisectionLibraryTests.cs  PiecewiseSpecialFunctionsLibraryTests.cs  TheOpenMathLibrary.ActuarialCalculators.Tests.csproj  TranscendentalLibraryTests.cs
C#/TheOpenMathLibrary.Engineering.Tests/: AngularFrequenciesTests.cs  CivilEngineeringLibraryTests.cs  ClassicalMechanicsTests.cs  DerivedDynamicQuantitiesTests.cs  ElectromagnetismTests.cs  FluidDynamicsTests.cs  GeneralEnergyDefinitionsTests.cs  KinematicsTests.cs  MechanicalOscillationsTests.cs  OpticsAndPhotonicsTests.cs  TheOpenMathLibrary.Engineering.Tests.csproj
Rust/: CODING_STANDARDS.md  Cargo.toml  README.md  ROADMAP.md  run_demo.ps1  run_demo.sh
Rust/.cargo/: config.toml
Rust/ActuarialAndArithmetic/: ActuarialLibrary.rs  ArithmeticLibrary.rs  BisectionLibrary.rs  PiecewiseSpecialFunctionsLibrary.rs
Rust/Engineering/: AngularFrequencies.rs  CivilEngineeringLibrary.rs  ClassicalMechanics.rs  DerivedDynamicQuantities.rs  ElectroMagnetism.rs  FluidDynamics.rs  GeneralEnergyDefinitions.rs
Rust/src/: actuarial_and_arithmetic.rs  engineering.rs  lib.rs
Rust/src/actuarial_and_arithmetic/: actuarial_library.rs  arithmetic_library.rs  bisection_library.rs  mod.rs  piecewise_special_functions_library.rs
Rust/src/engineering/: angular_frequencies.rs  civil_engineering_library.rs  classical_mechanics.rs  derived_dynamic_quantities.rs  electro_magnetism.rs  fluid_dynamics.rs  general_energy_definitions.rs  mod.rs
Rust/tests/: actuarial_exports.rs  engineering_exports.rs
(+47 files in other folders)
