[package]
name = "open_math_library"
version = "0.1.0"
authors = ["Demian Berisford-Maynard <ethicalsoftwaredevelopment@proton.me>"]
edition = "2021"
description = "A Rust library of actuarial, arithmetic, and engineering mathematics utilities."
readme = "README.md"
license = "MIT"

[features]
default = []
vulkan-demo = ["dep:vulkano", "dep:vulkano-shaders", "dep:vulkano-win", "dep:winit"]

[dependencies]
vulkano = { version = "0.34", optional = true }
vulkano-shaders = { version = "0.34", optional = true }
vulkano-win = { version = "0.34", optional = true }
winit = { version = "0.28", optional = true }


[[bin]]
name = "toroid_vulkan_demo"
required-features = ["vulkan-demo"]

