[package]
name = "open_math_library"
version = "0.1.0"
authors = ["Demian Berisford-Maynard <ethicalsoftwaredevelopment@proton.me>"]
edition = "2021"
description = "A Rust library of actuarial, arithmetic, and engineering mathematics utilities."
readme = "README.md"
license = "MIT"

[features]
default = []
vulkan-demo = ["dep:bytemuck", "dep:naga", "dep:vulkano", "dep:vulkano-win", "dep:winit"]

[dependencies]
bytemuck = { version = "1", features = ["derive"], optional = true }
naga = { version = "24", features = ["spv-out", "wgsl-in"], optional = true }
vulkano = { version = "0.33", optional = true }
vulkano-win = { version = "0.33", optional = true }
winit = { version = "0.28", optional = true }


[[bin]]
name = "toroid_vulkan_demo"
required-features = ["vulkan-demo"]

